<resources>
    <string name="app_name">Github User (Final App)</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="separator">//</string>
    <string name="location_logo">location logo</string>
    <string name="company_logo">company logo</string>
    <string name="avatar_list">avatar list</string>
    <string name="github_logo">github logo</string>
    <string name="search_placeholder">Insert GitHub ID</string>
    <string name="user_not_found">User Not Found</string>
    <string name="followers_not_found">%s Does Not Have Followers</string>
    <string name="following_not_found">%s Does Not Follow Anyone</string>
    <string name="instruction">Click search icon on top of the screen</string>
    <string name="finding">Finding…</string>
    <string name="user_avatar">User Avatar</string>
    <string name="languages">Languages</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorite_empty">You don\'t have favorite user</string>
    <string name="search_icon">search icon</string>
</resources>
