<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailActivity">

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/followers"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/followersNumber"
        app:layout_constraintStart_toStartOf="@+id/followersNumber"
        app:layout_constraintTop_toBottomOf="@id/followersNumber" />

    <TextView
        android:id="@+id/repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/repository"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/repositoryNumber"
        app:layout_constraintStart_toStartOf="@+id/repositoryNumber"
        app:layout_constraintTop_toBottomOf="@id/repositoryNumber" />

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/following"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/followingNumber"
        app:layout_constraintStart_toStartOf="@+id/followingNumber"
        app:layout_constraintTop_toBottomOf="@+id/followingNumber" />

    <TextView
        android:id="@+id/followingNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/followersNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toEndOf="@+id/followersNumber"
        app:layout_constraintTop_toTopOf="@+id/followersNumber"
        tools:text="2" />

    <TextView
        android:id="@+id/repositoryNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/followersNumber"
        app:layout_constraintEnd_toStartOf="@+id/followersNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/followersNumber"
        tools:text="0" />

    <TextView
        android:id="@+id/followersNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        tools:text="1" />


    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/location_logo"
        app:layout_constraintStart_toStartOf="@+id/location_logo"
        app:layout_constraintTop_toBottomOf="@+id/location_logo"
        tools:text="@string/location" />

    <TextView
        android:id="@+id/name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/avatar_detail"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/avatar_detail"
        app:layout_constraintTop_toBottomOf="@+id/avatar_detail"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/company_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/company_logo"
        app:layout_constraintStart_toStartOf="@+id/company_logo"
        app:layout_constraintTop_toBottomOf="@+id/company_logo"
        tools:text="@string/company" />

    <ImageView
        android:id="@+id/avatar_detail"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/github_logo" />

    <ImageView
        android:id="@+id/location_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/location_logo"
        app:layout_constraintEnd_toEndOf="@+id/company_detail"
        app:layout_constraintStart_toStartOf="@+id/company_detail"
        app:layout_constraintTop_toBottomOf="@+id/company_detail"
        app:srcCompat="@drawable/ic_baseline_place_24" />

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/company_logo"
        app:layout_constraintEnd_toEndOf="@+id/name_detail"
        app:layout_constraintStart_toStartOf="@+id/name_detail"
        app:layout_constraintTop_toBottomOf="@+id/name_detail"
        app:srcCompat="@drawable/ic_factory_black_24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="196dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/followers"
        app:tabTextColor="@android:color/darker_gray" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/favorite"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintBottom_toTopOf="@+id/followersNumber"
        app:layout_constraintEnd_toEndOf="@+id/followersNumber"
        app:layout_constraintStart_toStartOf="@+id/followersNumber" />

    <ProgressBar
        android:id="@+id/detail_loading_circle"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
